--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       $(this).children(".commandInput").focus();
     });
     $("body").on("click", ".notepad", function(event) {
-      $(this).children(".commandInput").focus();
+      //$(this).children(".commandInput").focus();
     });
     $("body").on("click", ".windowHeader", function(event) {
       if ($(this).parent().hasClass('cmdWindow')){
