--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -57,11 +57,13 @@
           <path d="M39.8,3.8c-1.5,0.6-3.1,1.1-4.7,1.3c1.7-1,3-2.6,3.6-4.5c-1.6,0.9-3.3,1.6-5.2,2C32,1,29.9,0,27.6,0c-4.5,0-8.2,3.7-8.2,8.2c0,0.6,0.1,1.3,0.2,1.9C12.8,9.7,6.8,6.4,2.8,1.5C2.1,2.7,1.7,4.1,1.7,5.6c0,2.8,1.5,5.3,3.6,6.8c-1.3,0-2.6-0.4-3.7-1c0,0,0,0.1,0,0.1c0,4,2.8,7.3,6.5,8c-0.7,0.2-1.4,0.3-2.1,0.3c-0.5,0-1.1,0-1.5-0.1c1.1,3.2,4.1,5.6,7.6,5.7C9.3,27.5,5.8,28.8,2,28.8c-0.7,0-1.3,0-2-0.1c3.6,2.3,7.9,3.7,12.5,3.7c15,0,23.2-12.4,23.2-23.2c0-0.4,0-0.7,0-1.1		C37.3,6.9,38.7,5.5,39.8,3.8z"/>
         </svg>
       </div>
+      <!--
       <div class="tab" style="--bg-color:#ca4a3e" onclick="window.open('https://gmail.com','_top');">
         <svg width="40" height="40" fill="#ca4a3e" bg="#ca4a3e">
           <path d="M36.3,0H35L20,11.6L5,0H3.8C1.7,0,0,1.6,0,3.7v22c0,2,1.7,3.7,3.8,3.7H5V6.5l15,11.3L35,6.5v22.9h1.3c2.1,0,3.8-1.6,3.8-3.7v-22C40,1.6,38.3,0,36.3,0z"/>
         </svg>
       </div>
+
       <div class="tab" style="--bg-color:#a72c31" onclick="window.open('https://ent.univ-rennes1.fr/','_top');">
         <svg width="40" height="40" fill="#a72c31" bg="#a72c31">
           <path d="M19.9,22.3L19.9,22.3L19.9,22.3L19.9,22.3L19.9,22.3z M20,22.1c0,0-0.1-0.1-0.1-0.1c0.1-0.2,0-0.3-0.1-0.5
@@ -142,17 +144,18 @@
           	 M34.8,3.5L34.8,3.5l-0.3-0.2l0,0.1L34.8,3.5z"/>
         </svg>
       </div>
+      -->
     </div>
     <script>
 
 
     function opentabs() {
-      window.open('https://www.youtube.com/feed/subscriptions');
       window.open('https://www.reddit.com');
       //window.open('https://www.dealabs.com');
       window.open("https://twitter.com");
-      window.open('https://gmail.com');
-      window.open('https://ent.univ-rennes1.fr/');
+      window.open('https://www.youtube.com/feed/subscriptions');
+      //window.open('https://gmail.com');
+      //window.open('https://ent.univ-rennes1.fr/');
       window.open('https://www.messenger.com','_top');
     }
 
