--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -31,8 +31,22 @@
                     wordElement.attr('k_words', k_words);
                     wordElement.attr('e_words', e_words);
                     wordElement.attr('f_words', f_words);
+                    wordElement.addClass("word");
 
                     wordsDiv.append(wordElement);
+                });
+            });
+            $("#search_input").on("input", function() {
+                var searchValue = $(this).val().toLowerCase();
+                $(".word").each(function() {
+                    var kWords = $(this).attr("k_words").toLowerCase();
+                    var eWords = $(this).attr("e_words").toLowerCase();
+                    var fWords = $(this).attr("f_words").toLowerCase();
+                    if (kWords.includes(searchValue) || eWords.includes(searchValue) || fWords.includes(searchValue)) {
+                        $(this).show();
+                    } else {
+                        $(this).hide();
+                    }
                 });
             });
         });
