--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kazakh Language</title>
+    <title>My kazakh words</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,12 +52,6 @@
                         $(this).hide();
                     }
                 });
-            });
-            $('#search_bar').on('blur',function () { 
-                var blurEl = $(this); 
-                setTimeout(function() {
-                    blurEl.focus()
-                }, 10);
             });
         });
     </script>
