--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -20,7 +20,7 @@
             //var url = "https://drive.google.com/uc?export=download&id=1Ae5XP-kzPitGzaMWXx_iJGIp_dGZGBwb";
             //var url = "https://googledrive.com/host/1Ae5XP-kzPitGzaMWXx_iJGIp_dGZGBwb";
             var url = "https://gigiparmentier.github.io/kazakh/words.txt";
-            $.get(url, function(data) {
+            $.get({url: url,cache: false}).then(function(data) {
                 var lines = data.split("\n").reverse();
                 var wordsDiv = $("#words");
 
