--- a/kazakh/index.html
+++ b/kazakh/index.html
@@ -14,18 +14,23 @@
     <h1 id="title">My kazakh words</h1>
     <input id="search_bar" type="text" id="search_input" placeholder="" autofocus>
     <div id="words_outer"><div id="words"></div></div></div>
+    <div id="guess_game">
+        <h2>Guess the word</h2>
+        <p id="guess_word"></p>
+        <input id="guess_input" type="text" placeholder="Enter a guess" autofocus>
+        <p id="guess_result"></p>
+    </div>
     <script>
         var words_list = [];
         
         $(document).ready(function(){
-            //var url = "https://drive.google.com/uc?export=download&id=1Ae5XP-kzPitGzaMWXx_iJGIp_dGZGBwb";
-            //var url = "https://googledrive.com/host/1Ae5XP-kzPitGzaMWXx_iJGIp_dGZGBwb";
             var url = "https://gigiparmentier.github.io/kazakh/words.txt";
             $.get({url: url,cache: false}).then(function(data) {
                 var lines = data.split("\n").reverse();
                 var wordsDiv = $("#words");
 
                 $('#search_bar').attr('placeholder', 'Search in ' + lines.length + ' words');
+                $('#search_bar').val('');
 
                 lines.forEach(function(line) {
                     var parts = line.split(":");
@@ -46,21 +51,54 @@
 
                     wordsDiv.append(wordElement);
                 });
-            });
-            $("#search_bar").on("input", function() {
-                var searchValue = $(this).val().toLowerCase();
-                $(".word").each(function() {
-                    var kWords = $(this).attr("k_words").toLowerCase();
-                    var eWords = $(this).attr("e_words").toLowerCase();
-                    var fWords = $(this).attr("f_words").toLowerCase();
-                    if (kWords.includes(searchValue) || eWords.includes(searchValue) || fWords.includes(searchValue)) {
-                        $(this).show();
-                    } else {
-                        $(this).hide();
-                    }
-                });
+                start_game();
             });
         });
+
+        $("#search_bar").on("input", function() {
+            var searchValue = $(this).val().toLowerCase();
+            $(".word").each(function() {
+                var kWords = $(this).attr("k_words").toLowerCase();
+                var eWords = $(this).attr("e_words").toLowerCase();
+                var fWords = $(this).attr("f_words").toLowerCase();
+                if (kWords.includes(searchValue) || eWords.includes(searchValue) || fWords.includes(searchValue)) {
+                    $(this).show();
+                } else {
+                    $(this).hide();
+                }
+            });
+        });
+
+        $('#guess_input').on('keypress', function(e) {
+            if(e.which != 13) {
+                return;
+            }
+            var guess = $(this).val().toLowerCase();
+            var eWords = $('#guess_word').attr('e_words').toLowerCase().split(",");
+            $('#guess_result').fadeIn(0);
+            if (eWords.includes(guess)) {
+                $("#guess_result").text("Correct!");
+                start_game();
+            } else {
+                $("#guess_result").text("Nope!");
+            }
+            setTimeout(function() {
+                $('#guess_result').fadeOut();
+            }, 500);
+        });
+
+        function start_game() {
+            var randomIndex = Math.floor(Math.random() * words_list.length);
+            var word = words_list[randomIndex];
+            $("#guess_word").text(word.k_words);
+            $('#guess_word').attr('k_words', word.k_words);
+            $('#guess_word').attr('e_words', word.e_words);
+            $('#guess_word').attr('f_words', word.f_words);
+            var colors = ['#fbc59f','#f4eb84','#c499e0','#f39f95','#a9e3bb','#a6cdf4','#e6b8b8'];
+            var randomColor = colors[Math.floor(Math.random() * colors.length)];
+            $("#guess_word").css("background-color", randomColor);
+            $("#guess_input").val("");
+        }
     </script>
 </body>
 </html>
